# openccu-loom-types-py

./: LICENSE  Makefile  README.md  changelog.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python-publish.yml  release-on-tag.yml
openccu_loom_types/: __init__.py  enums.py  rest.py  ws.py
scripts/: gen_enums.py  gen_ws.py
tests/: test_reserved_words.py
